Fix #826 - Project metadata and Remix not showing up

--- a/public/resources/remix/style.less
+++ b/public/resources/remix/style.less
@@ -22,7 +22,7 @@ body {
   background: white;
   padding: 11px 0 11px 76px;
   font-family: "Fira Medium", "Helvetica Neue", sans-serif;
-
+  z-index: 100000000;
 
   .thimble-logo {
     position: absolute;
